set(BINARY ${CMAKE_PROJECT_NAME})

set(SYFT_SRC_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
set(SYFT_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)

include_directories(${SYFT_INCLUDE_DIR})

file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true *.h *.cpp)

set(SOURCES ${SOURCES})

add_library(${BINARY}_lib STATIC ${SOURCES})